fixed overflow of reviews

--- a/main.css
+++ b/main.css
@@ -241,7 +241,7 @@ main {
     line-height: 16px;
   }
   .review-container {
-    width: 31%;
+    width: 30%;
     margin-right: 3.33333333%;
   }
   #review3 {
